# ChangeLog for net-mail/evolution
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-mail/cvs-repo/gentoo-x86/net-mail/evolution/Attic/ChangeLog,v 1.94 2004/03/23 15:14:44 avenj Exp $

  24 Mar 2004; Jon Portnoy <avenj@gentoo.org> evolution-1.4.5.ebuild,
  evolution-1.4.6.ebuild :
  Fixed screwy AMD64 deps in 1.4.5 and modified both ebuilds to recognize
  kerberos properly on AMD64.

  23 Mar 2004; Alastair Tse <liquidx@gentoo.org> evolution-1.4.6.ebuild:
  fix amd64 dep and also fix configure flag passing in src_compile for amd64

*evolution-1.4.6 (22 Mar 2004)

  22 Mar 2004; Alastair Tse <liquidx@gentoo.org> evolution-1.4.6.ebuild:
  version bump

  07 Mar 2004; Alastair Tse <liquidx@gentoo.org> evolution-1.4.5.ebuild:
  reinstate gnome2_pkg_postinst

  18 Feb 2004; Alastair Tse <liquidx@gentoo.org> evolution-1.4.5.ebuild,
  files/evolution-1.4.5-nztimezone.patch:
  add CVS backported patch to deal with NZDT (UTC+13) (#41817)

  07 Feb 2004; Alastair Tse <liquidx@gentoo.org> evolution-1.4.3.ebuild,
  evolution-1.4.4.ebuild, evolution-1.4.5.ebuild:
  reorder eclass inherits to prevent kde overriding gnome2_src_install

  14 Jan 2004; Aron Griffis <agriffis@gentoo.org> evolution-1.4.5.ebuild:
  stable on alpha

  14 Dec 2003; Lars Weiler <pylon@gentoo.org> evolution-1.4.5.ebuild:
  Make stable on ppc

  13 Dec 2003; Brad House <brad_mssw@gentoo.org> evolution-1.4.5.ebuild:
  mark stable on amd64

  11 Dec 2003; <agriffis@gentoo.org> evolution-1.4.5.ebuild,
  files/evolution-1.4.4-alpha.patch:
  Modify 64-bit patch according to response on evolution-patches mailing list.
  Apply it regardless of ARCH because it is necessary for all 64-bit (and
  doesn't hurt other arches). Mark stable on ia64

  28 Nov 2003; Jason Wever <weeve@gentoo.org> evolution-1.4.5.ebuild:
  Marked stable on sparc, fixes bug #32744.

  22 Oct 2003; Alastair Tse <liquidx@gentoo.org> evolution-1.2.3.ebuild,